--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
 <body>
   <h2>📨 Surat Undangan Masal</h2>
   <iframe 
-    src="https://umar.github.io/surat-masal/masakerja.html" 
-    width="100%" 
-    height="800" 
-    frameborder="0"
-    style="border: none; overflow: hidden;"
-    scrolling="no"
-  ></iframe>
+  src="https://grafer-ctrl.github.io/masakerja/" 
+  width="100%" 
+  height="800" 
+  frameborder="0" 
+  style="border: none; overflow: hidden;" 
+  scrolling="no">
+</iframe>
 </body>
 </html>
+
 
