--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
   <title>Landing Page Surat Masal</title>
 </head>
 <body>
-  <h2>📨 Surat Undangan Masal</h2>
+  <h2>Surat Undangan Masal</h2>
   <iframe 
-  src="https://grafer-ctrl.github.io/masakerja/" 
-  width="100%" 
-  height="800" 
-  frameborder="0" 
-  style="border: none; overflow: hidden;" 
-  scrolling="no">
-</iframe>
+    src="https://grafer-ctrl.github.io/masakerja.html" 
+    width="100%" 
+    height="800" 
+    frameborder="0"
+    style="border: none; overflow: hidden;"
+    scrolling="no"
+  ></iframe>
 </body>
 </html>
 
